# funiqaI

./: .gitignore  README.md  commitlint.config.ts  package.json  pnpm-lock.yaml
.husky/: commit-msg  pre-commit
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.py  app_manager.py  babel.cfg  cli.py  docker-compose.yml  pyproject.toml  pytest.ini
backend/app/: __init__.py  config.py  main.py  routes.py  schemas.py
backend/app/account/: __init__.py  app.py  routes.py  schemas.py
backend/app/account/service/: account_service.py  tenant_service.py
backend/app/auth/: __init__.py  app.py  routes.py  schemas.py
backend/app/errors/: __init__.py  account.py  base.py  common.py  exception.py  user.py
backend/app/models/: account.py  user.py
backend/app/user/: models.py  schemas.py
backend/app/user/service/: __init__.py  account_service.py
backend/command/: __init__.py  alembic.py  i18n.py  scripts.py
backend/configs/: __init__.py  app_config.py  apps.py  celery.py  cors.py  cros.py  database.py  language.py  log_config.py  mail.py  sentry_config.py  token.py
backend/configs/package/: __init__.py
backend/database/: __init__.py  core.py  models.py
backend/docker/: entrypoint.sh
backend/locales/: templates.pot  test_i18n.pot
backend/locales/en/LC_MESSAGES/: templates.po  test_i18n.po
backend/locales/zh_CN/LC_MESSAGES/: templates.po  test_i18n.po
backend/middleware/: __init__.py  auth.py  i18n.py  request_context.py
backend/migrations/: env.py
backend/migrations/versions/: 2024_11_29_1044-51d48c80be34_initial_migration.py  2024_11_29_2327-06b87a68c39e_initial_tables.py  2024_12_05_0041-0db8ecf7ed4a_adjust_account_tenant_user.py  2024_12_23_0919-2608b961c4d3_migrate_language_from_user_to_account.py  2025_01_15_0156-55db90ca20f2_update_tenant_account_user_oauth_tables.py
backend/services/: celery.py  email_service.py
backend/tasks/: email_tasks.py
backend/templates/: activation_verification_email_template.html  reset_password_verification_email_template.html  signup_verification_email_template.html
backend/templates/en/: activation_verification_email_template.html  reset_password_verification_email_template.html  signup_verification_email_template.html
backend/templates/zh-CN/: activation_verification_email_template.html  reset_password_verification_email_template.html  signup_verification_email_template.html
backend/tests/: conftest.py  test_routes.py
backend/tests/i18n/: conftest.py  test_i18n.py  test_middleware.py
backend/tests/i18n/test_data/: data.py
backend/tests/routes/: test_routes.py
backend/tests/utils/: test_datetime.py  test_json.py  test_security.py  test_singleton.py  test_smtp.py  test_template_renderer.py  test_token_manager.py
backend/utils/: context.py  datatime.py  i18n.py  json.py  loguru_handler.py  security.py  sentry_handler.py  singleton.py  smtp.py  template_renderer.py  token_manager.py
dev/: reformat
frontend/: .editorconfig  .env.example  README.md  commitlint.config.ts  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/.husky/: commit-msg  pre-commit
frontend/apis/: core.ts  index.ts
frontend/apis/modules/: auth.ts
frontend/apis/openapis/: account.ts  (+1 more)
frontend/app/: layout.tsx  page.tsx
frontend/components/: AppNavbar.tsx  CardAlert.tsx  CurrentUserInfoBox.tsx  CustomDatePicker.tsx  CustomIcons.tsx  Header.tsx  HighlightedCard.tsx  HomePageHeader.tsx  I18nProvider.tsx  LangSelect.tsx  MenuButton.tsx  MenuContent.tsx  MobileNavbar.tsx  NavbarBreadcrumbs.tsx  OptionsMenu.tsx  Providers.tsx  Search.tsx  SelectContent.tsx  SideMenu.tsx  SideMenuButton.tsx  SideMenuContent.tsx  SideMenuMobile.tsx  SiteLogo.tsx  TenantsCheck.tsx  Toast.tsx  UserActionsMenu.tsx  UserInfoBox.tsx  VerificationCodeForm.tsx
frontend/hooks/: useSessionCookie.ts  useUserInfo.ts
frontend/plugins/: session.ts
frontend/scripts/: generate-openapi.js
frontend/theme/: AppTheme.tsx  ColorModeIconDropdown.tsx  ColorModeSelect.tsx  configs.ts  index.ts  server.ts  themePrimitives.ts
frontend/types/: mui-theme.d.ts  openapi.d.ts  svgr.d.ts
frontend/utils/: constants.ts  get-query-client.ts  useCountdown.ts
(+60 files in other folders)
